# HCF

./: .dockerignore  .gitignore  Dockerfile.backend  Goals.md  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  tests.yml
archive/: old-backend-main.py  old-requirements.txt
archive/bmad-output/: backlog.md
archive/bmad-output/planning-artifacts/: architecture-deep-dive.md  architecture.md  prd.md  project-brief.md
backend/: .env.example  pyproject.toml
backend/src/hcf/: __init__.py  config.py
backend/src/hcf/api/: __init__.py  app.py  routes.py
backend/src/hcf/cache/: __init__.py  store.py
backend/src/hcf/data/: __init__.py  aqi.py  canopy.py  heat.py  noise.py  quality.py  traffic.py
backend/src/hcf/scoring/: __init__.py  engine.py  pipeline.py
backend/tests/: conftest.py  test_canopy.py  test_heat.py  test_integration.py  test_network.py  test_noise.py  test_routing.py  test_scoring.py  test_traffic.py
docs/c4/: README.md  components.md  containers.md  context.md  decisions.md
frontend/: index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: DeficitPanel.tsx  EmptyState.tsx  InterventionCard.tsx  Legend.tsx  Map.tsx  SearchBar.tsx  SegmentPopup.tsx  StatsBar.tsx
frontend/src/hooks/: useComfortData.ts
frontend/src/styles/: index.css
src/: cache.py  canopy.py  network.py  noise.py  pipeline.py  server.py
tests/: cities.py  test_canopy.py  test_integration.py  test_network.py  test_noise.py  test_scoring.py
(+5 files in other folders)
